--- a/src/bot/lexicon/templates/about.html
+++ b/src/bot/lexicon/templates/about.html
@@ -1,7 +1,7 @@
 🤖 <b>Electrosafety_bot</b> ⚡️ - бот для прохождения тестов по электробезопасности.
 
-🧩 В настройках вы можете выбрать количество вопросов и тему.
-🎲 По умолчанию выбрана <b>IV группа</b>, <b>10 вопросов</b>.
+🧩 В настройках вы можете выбрать количество вопросов, тему и отображение оповещений при правильном ответе.
+🎲 По умолчанию выбрана <b>IV группа</b>, <b>10 вопросов</b> и включены оповещения.
 
 ⏳ Время на ответ не ограничено.
 🏆 Тест считается успешным при <b>80%</b> правильных ответов.
